--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ConferenceController!{% endblock %}
+{% block title %}Conference guestbook{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,22 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+
 
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ '/home/nikita/guestbook/src/Controller/ConferenceController.php'|file_link(0) }}">src/Controller/ConferenceController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/home/nikita/guestbook/templates/conference/index.html.twig'|file_link(0) }}">templates/conference/index.html.twig</a></code></li>
     </ul>
+    <div class="main">
+        <h2>Give your Feedback!</h2>
+        {% for conference in conferences %}
+        <h4>{{ conference }}</h4>
+            <p>
+                <a href="{{ path('conference', {id: conference.id}) }}">View</a>
+            </p>
+        {% endfor %}
+    </div>
+
 </div>
 {% endblock %}
