--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -38,4 +38,6 @@
                 No comments have been posted yet for this conference.
             </div>
         {% endif %}
+    <h2>Add your own feedback</h2>
+    {{ form(comment_form) }}
 {% endblock %}
