--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -9,20 +9,15 @@
 </style>
 
 <div class="example-wrapper">
-
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/nikita/guestbook/src/Controller/ConferenceController.php'|file_link(0) }}">src/Controller/ConferenceController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/nikita/guestbook/templates/conference/index.html.twig'|file_link(0) }}">templates/conference/index.html.twig</a></code></li>
-    </ul>
     <div class="main">
-        <h2>Give your Feedback!</h2>
+        <h2>List of conferences with comments:</h2>
         {% for conference in conferences %}
-        <h4>{{ conference }}</h4>
-            <p>
-                <a href="{{ path('conference', {id: conference.id}) }}">View</a>
-            </p>
+            <div style="border: 1px solid black">
+                <h4>{{ conference }}</h4>
+                <p>
+                    <a href="{{ path('conference', {id: conference.id}) }}">View</a>
+                </p>
+            </div>
         {% endfor %}
     </div>
 
