--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,12 +7,18 @@
     </head>
     <body>
     <header>
-        <h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
-        <ul>
-            {% for conference in conferences %}
-                <li><a href="{{ path('conference', {id: conference.id}) }}">{{ conference }}</a></li>
-            {% endfor %}
-        </ul>
+        <div style="display: flex; justify-content: space-between">
+            <div >
+                <h1 style="display: inline-block"><a href="{{ path('homepage') }}">Guestbook</a></h1>
+
+                    {% for conference in conferences %}
+                        <div style="display: inline-block"><a href="{{ path('conference', {id: conference.id}) }}">{{ conference }}</a></div>
+                    {% endfor %}
+            </div>
+            <div >
+                <a href="{{ path('admin') }}">Admin</a>
+            </div>
+        </div>
         <hr />
     </header>
         {% block body %}{% endblock %}
